# gitlab-jobs-monit

./: Cargo.toml  index.html  zombie_jobs.csv
.github/: env
.github/workflows/: ci.yml  release.yml
src/: main.rs
web/: index.html  style.css
