[package]
name = "gitlab-jobs-monit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
reqwest = { version = "0.11", default-features = false, features = [ "rustls-tls", "blocking" ] }
csv = "1.3"
log = "0.4"
env_logger = "0.11"
