[package]
name = "gitlab-jobs-monit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
reqwest = { version = "0.11", default-features = false, features = [ "rustls-tls" ] }
csv = "1.3"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.40", features = ["rt", "macros", "rt-multi-thread"] }
futures-util = "0.3"
regex = "1.11"
sqlite = "0.36"
clap = { version = "4", features = ["derive"]}